FIX | Padding of Container component on tablet

--- a/components/Container/style.module.scss
+++ b/components/Container/style.module.scss
@@ -7,9 +7,6 @@
     max-width: 689px;
     margin-left: auto;
     margin-right: auto;
-  }
-
-  @include media(">1134px") {
     padding: 0;
   }
 
